# Scientific-calculator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
my_headers/: applicationsConsts.h
src/: CMakeLists.txt
src/#0-commonpch/: pch.h  stackVectorPch.cpp  stackVectorPch.h
src/#1-entry/: entry.cpp
src/#2-application/: CMakeLists.txt  mainloop.cpp
src/#3-windowMaker/: CMakeLists.txt  windowMaker.cpp  windowMaker.h
src/#4-UIManager/: CMakeLists.txt  buttons.cpp  buttons.h  mouse.cpp  mouse.h
src/#5-logic/: logic.cpp  logic.h
